@@ -55,6 +55,8 @@ OCamlbuild:
 Bug fixes:
 - PR#5836, PR#6684: printing lazy values in ocamldebug may segfault
   (Gabriel Scherer)
+- PR#6560: Wrong failure message for {Int32,Int64,NativeInt}.of_string
+  (Maxime Dénès and Gabriel Scherer)
 - PR#6648: show_module should indicate its elision
 - PR#6650: Cty_constr not handled correctly by Subst
 - PR#6651: Failing component lookup
